cambio de titulo y logo

--- a/GrupoCero.html
+++ b/GrupoCero.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>Grupo Cero</title>
+    <title>Grupo Zero</title>
   </head>
   <body>
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand text-white">
-                <img src="https://scontent.fscl18-1.fna.fbcdn.net/v/t31.18172-8/14379809_1123560114391537_3190486254318672233_o.jpg?_nc_cat=106&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=W3sdyu8B7NAAX8wDGB0&_nc_ht=scontent.fscl18-1.fna&oh=c5f8deab49db4200bef15013a1c75d79&oe=6092D079" height="60px">
+                <img src="https://st2.depositphotos.com/3705411/7303/v/600/depositphotos_73035581-stock-illustration-acrylic-alphabet-z-letter.jpg" height="60px">
             </a>
             <button class="navbar-toggler" data-target="#Menú" data-toggle="collapse" type="button" >
                 <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,9 @@
                             <a class="dropdown-item" href="#">Luis Torterolo</a>
                         </div>
                     </li>
+                    <li class="navbar-item active">
+                      <a href="login.html" class="nav-link">Login</a>
+                  </li>
                 </ul>
             </div>
 
