agregue href inicio

--- a/GrupoZero.html
+++ b/GrupoZero.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="Menú">
                 <ul class="navbar-nav mr-auto">
                     <li class="navbar-item active">
-                        <a href="#" class="nav-link">Inicio</a>
+                        <a href="GrupoZero.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="navbar-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="desplegable" href="#"> 
@@ -35,8 +35,12 @@
                         </div>
                     </li>
                     <li class="navbar-item active">
+                    <a href="#" class="nav-link">Contacto</a>
+                 </li>
+                    <li class="navbar-item active">
                       <a href="login.html" class="nav-link">Login</a>
                   </li>
+                  
                 </ul>
             </div>
 
