agregue el artista antonio

--- a/GrupoZero.html
+++ b/GrupoZero.html
@@ -29,7 +29,7 @@
                             Artistas
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Antonio García</a>
+                            <a class="dropdown-item" href="antonio.html">Antonio García</a>
                             <a class="dropdown-item" href="#">María Bashkirtseff</a>
                             <a class="dropdown-item" href="#">Luis Torterolo</a>
                         </div>
@@ -57,13 +57,15 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active" style="height: 100vh">
-                <img src="https://img2.codigonuevo.com/4e/1a/19/cumplen-100-anos-nacimiento-frida-kahlo-930x600.jpg" class="img-thumbnail mx-auto d-block" alt="First slide">
+              <a href="antonio.html">
+                <img src="https://cdn.shopify.com/s/files/1/2718/0726/products/IMG_5661_360x.jpg?v=1516655423" class="img-thumbnail mx-auto d-block" width="400px" alt="First slide">
+              </a>
               </div>
               <div class="carousel-item" style="height: 100vh">
-                <img src="https://conucrania.files.wordpress.com/2016/06/content_full-1.jpg" class="img-thumbnail mx-auto d-block"  alt="Second slide">
+                <img src="https://conucrania.files.wordpress.com/2016/06/content_full-1.jpg" class="img-thumbnail mx-auto d-block" width="500px" alt="Second slide">
               </div>
               <div class="carousel-item" style="height: 100vh">
-                <img src="http://www.artistasvisualeschilenos.cl/658/articles-42286_imagen.jpg"  class="img-thumbnail mx-auto d-block" height="1000px" alt="Third slide">
+                <img src="http://www.artistasvisualeschilenos.cl/658/articles-42286_imagen.jpg"  class="img-thumbnail mx-auto d-block" width="510px" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
